--- a/EquiposTecnicosSN.Web/Web.config
+++ b/EquiposTecnicosSN.Web/Web.config
@@ -13,6 +13,7 @@
       <add name="EquiposTecnicosDbContext" connectionString="Data Source=GAME-PC\SQLEXPRESS;Integrated Security=SSPI;Initial Catalog=EquiposTecnicosSN" providerName="System.Data.SqlClient"/>
     -->
       <add name="EquiposTecnicosDbContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-EquiposTecnicosSN.Web-20160330123610.mdf;Initial Catalog=aspnet-EquiposTecnicosSN.Web-20160330123610;Integrated Security=True" providerName="System.Data.SqlClient" />
+      <add name="SSOMembershipProviderConnectionString" connectionString="Data Source=GAME-PC\SQLEXPRESS;Initial Catalog=SSOHospital;User ID=sa;Password=ssecure;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -21,6 +22,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <membership defaultProvider="SSOMembershipProvider">
+      <providers>
+        <add name="SSOMembershipProvider" type="Salud.Security.SSO.SSOMembershipProvider" connectionStringName="SSOMembershipProviderConnectionString" alwaysAuthenticate="false" allowAnonymousAccessToImages="true" allowAnonymousAccessToScripts="true" updateTimeoutOnWebMethod="false" useCache="false" cookieName="SSO_AUTH_COOKIE_SSS" />
+      </providers>
+    </membership>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" maxRequestLength="2097151" />
