--- a/EquiposTecnicosSN.Web/Web.config
+++ b/EquiposTecnicosSN.Web/Web.config
@@ -12,8 +12,8 @@
     <!--
       <add name="EquiposTecnicosDbContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-EquiposTecnicosSN.Web-20160330123610.mdf;Initial Catalog=aspnet-EquiposTecnicosSN.Web-20160330123610;Integrated Security=True" providerName="System.Data.SqlClient" />
     -->
-      <add name="EquiposTecnicosDbContext" connectionString="Data Source=GAME-PC\SQLEXPRESS;Integrated Security=SSPI;Initial Catalog=aspnet-EquiposTecnicosSN.Web-20160330123610" providerName="System.Data.SqlClient"/>
-      <add name="SSOMembershipProviderConnectionString" connectionString="Data Source=GAME-PC\SQLEXPRESS;Integrated Security=SSPI;Initial Catalog=SSO" providerName="System.Data.SqlClient" />
+      <add name="EquiposTecnicosDbContext" connectionString="Data Source=DESARROLLO-NQN\SQLEXPRESS;Integrated Security=SSPI;Initial Catalog=aspnet-EquiposTecnicosSN.Web-20160330123610" providerName="System.Data.SqlClient"/>
+      <add name="SSOMembershipProviderConnectionString" connectionString="Data Source=DESARROLLO-NQN\SQLEXPRESS;Integrated Security=SSPI;Initial Catalog=SSO" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
