--- a/EquiposTecnicosSN.Web/Web.config
+++ b/EquiposTecnicosSN.Web/Web.config
@@ -12,7 +12,7 @@
     <!--
       <add name="EquiposTecnicosDbContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-EquiposTecnicosSN.Web-20160330123610.mdf;Initial Catalog=aspnet-EquiposTecnicosSN.Web-20160330123610;Integrated Security=True" providerName="System.Data.SqlClient" />
     -->
-      <add name="EquiposTecnicosDbContext" connectionString="Data Source=DESARROLLO-NQN\SQLEXPRESS;Integrated Security=SSPI;Initial Catalog=aspnet-EquiposTecnicosSN.Web-20170322" providerName="System.Data.SqlClient"/>
+      <add name="EquiposTecnicosDbContext" connectionString="Data Source=DESARROLLO-NQN\SQLEXPRESS;Integrated Security=SSPI;Initial Catalog=aspnet-EquiposTecnicosSN.Web-20170322-test" providerName="System.Data.SqlClient"/>
       <add name="SSOMembershipProviderConnectionString" connectionString="Data Source=DESARROLLO-NQN\SQLEXPRESS;Integrated Security=SSPI;Initial Catalog=SSO" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
